SDM-2641: Add initial post-action config. Some api extraction to enable reuse with post-actions.